--- a/funcpred/templates/index.html
+++ b/funcpred/templates/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block main %}
-
-{{form.as_p}}
+<form action="" method="post">	
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" />
+</form>
+<script type="text/javascript" src="/static/collected/admin/js/vendor/jquery/jquery.js"></script>
+{{ form.media }}
 
 {% endblock%}
