--- a/funcpred/templates/search.html
+++ b/funcpred/templates/search.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
 
 {% block main %}
 <form action="" method="post">	
@@ -8,5 +9,16 @@
 </form>
 <script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
 {{ form.media }}
+<link href="{% static "css/multi-select.css"%}" media="screen" rel="stylesheet" type="text/css">
+<script src="{% static "js/jquery.multi-select.js"%}" type="text/javascript"></script>
+<script type="text/javascript">
+$('#id_expression_source').multiSelect()
+</script>
+<style>
+.ms-container{
+	width: 100%;
+	/*height: 1000px;*/
+}
+</style>
 
 {% endblock%}
