--- a/funcpred/templates/search.html
+++ b/funcpred/templates/search.html
@@ -2,23 +2,36 @@
 {% load static from staticfiles %}
 
 {% block main %}
-<form action="" method="post">	
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" />
-</form>
-<script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
-{{ form.media }}
-<link href="{% static "css/multi-select.css"%}" media="screen" rel="stylesheet" type="text/css">
-<script src="{% static "js/jquery.multi-select.js"%}" type="text/javascript"></script>
-<script type="text/javascript">
-$('#id_expression_source').multiSelect()
-</script>
-<style>
-.ms-container{
-	width: 100%;
-	/*height: 1000px;*/
-}
-</style>
-
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Search</h2>
+		</div><!--col--!>
+	</div><!--row--!>
+	<div class="row">
+		<div class="col-md-8">
+	
+			<form action="" method="post">	
+			    {% csrf_token %}
+			    {{form.as_p}}
+			    <input type="submit" />
+			</form>
+			<script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
+			{{ form.media }}
+			<link href="{% static "css/multi-select.css"%}" media="screen" rel="stylesheet" type="text/css">
+			<script src="{% static "js/jquery.multi-select.js"%}" type="text/javascript"></script>
+			<script type="text/javascript">
+			$('#id_expression_source').multiSelect()
+			</script>
+			<style>
+			.ms-container{
+				width: 100%;
+				/*height: 1000px;*/
+			}
+			</style>
+		</div><!--column!-->
+		<div class="col-md-4">
+			{% block help %}
+			{% endblock %}
+		</div><!--col--!>
+    </div><!--row!-->
 {% endblock%}
