--- a/funcpred/templates/base.html
+++ b/funcpred/templates/base.html
@@ -74,6 +74,8 @@
 </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="{% static "js/vendor/jquery-1.11.2.min.js"%}"><\/script>')</script>
+	<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
+	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
 
 	<script src="{% static "js/vendor/bootstrap.min.js"%}"></script>
 
