data table accettabile

--- a/funcpred/templates/base.html
+++ b/funcpred/templates/base.html
@@ -69,7 +69,8 @@
 {% endblock %}
 
 
-<footer class="navbar navbar-fixed-bottom">
+<!--footer class="navbar navbar-fixed-bottom"-->
+<footer>
 	<center><p><a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/it/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/it/88x31.png" /></a>&nbsp;This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/it/">Creative Commons Attribution-NonCommercial 3.0 Italy License</a>.</p></center>
 </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
