--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -9,7 +9,8 @@
         </div>
         <div class="col-md-6">
 		<h2>Search by function</h2>
-		<p><a href="/funcpred/function_search">function search</a></p>
+		<p><a href="/funcpred/browse_functions">Browse functions</a></p>
+		<p><a href="/funcpred/function_search">Advanced function search</a></p>
         </div>
       </div>
 
