--- a/funcpred/templates/show_function_search.html
+++ b/funcpred/templates/show_function_search.html
@@ -10,7 +10,7 @@
 	<ul>
 		<li>function: <strong>{{function_search.function}}</strong></li>
 		<li>expression sources:
-			{%for e in exp_sources%}
+			{%for e in exp_sources_top%}
 			<strong>{{e}}</strong>,
 			{%endfor%}
 		</li>
