--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -1,11 +1,38 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
 
 {% block main %}
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
 		<h2>Search by gene</h2>
-		<p><a href="/funcpred/gene_search">gene search</a></p>
+		<form action="" method="post">	
+		    {% csrf_token %}
+		    <table>
+			<tr>
+				<td>
+				    {{form.as_p}}
+				</td>
+				<td>
+					<p>
+					    <input type="submit" value="Search">
+					</p>
+				</td>
+			</tr>
+  		    </table>
+		</form>
+		<script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
+		{{ form.media }}
+		<script type="text/javascript">
+			$('.errorlist').hide()
+		</script>
+		<style>
+		.ms-container{
+			width: 100%;
+			/*height: 1000px;*/
+		}
+		</style>
+		<p><a href="/funcpred/gene_search">Advanced gene search</a></p>
         </div>
         <div class="col-md-6">
 		<h2>Search by function</h2>
