--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{%block header %}
+    <div class="container">
+      <div class="jumbotron">
+        <!--h1>Hello, world!</h1-->
+        <p>In-silico prediction of gene function.</p>
+        <p>For protein-coding and lncRNA human genes.</p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+{%endblock%}
+
 {% block main %}
       <!-- Example row of columns -->
       <div class="row">
