--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -55,11 +55,18 @@
       <hr>
       <div class="row">
         <div class="col-md-6">
+	  <h3>Please cite</h3>
+	   <p>Perron, U., Provero, P., & Molineris, I. (2016) <strong>In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression.</strong>
+	   Submitted to BMC Bioinformatics</p>
 	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
        </div>
         <div class="col-md-6">
-          <h2>Update</h2>
+          <h3>Update</h3>
 	  {% include "mailchimp_form.html" %}
+	  <h3>Any questions?</h3>
+	  	<script type="text/javascript">
+			document.write("<a href=\"mail" + "to:" + new Array("ivan.molineris","unito.it").join("@") + "\">" + '<button type="button" class="btn btn-info">Feel free to contact the authors!</button>' + "</" + "a>");
+			</script>
         </div>
       </div>
 
