--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -58,7 +58,8 @@
 	  <h3>Please cite</h3>
 	   <p>Perron, U., Provero, P., & Molineris, I. (2016) <strong>In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression.</strong>
 	   Submitted to BMC Bioinformatics</p>
-	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
+	  <a href="http://www.hsr.it/research/organization/divisions-centers/center-for-translational-genomics-and-bioinformatics/"><img width="48%" src="http://www.hsr.it/wp-content/uploads/2014/09/hsr_logo.png"></a>
+	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img width="48%" src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
        </div>
         <div class="col-md-6">
           <h3>Update</h3>
