--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -58,12 +58,10 @@
 	  <h3>Please cite</h3>
 	   <strong><a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-017-1535-x">In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression.</a></strong>
 	   <p><i>Perron U, Provero P, Molineris I.</i> BMC Bioinformatics. 2017 Mar 23;18(Suppl 5):144. doi: 10.1186/s12859-017-1535-x.</p>
-	  <a href="http://www.hsr.it/research/organization/divisions-centers/center-for-translational-genomics-and-bioinformatics/"><img width="48%" src="http://www.hsr.it/wp-content/uploads/2014/09/hsr_logo.png"></a>
+	  <a href="http://www.hsr.it/research/organization/divisions-centers/center-for-translational-genomics-and-bioinformatics/"><img width="48%" src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Logo_HSR.png"></a>
 	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img width="48%" src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
        </div>
         <div class="col-md-6">
-          <h3>Update</h3>
-	  {% include "mailchimp_form.html" %}
 	  <h3>Any questions?</h3>
 	  	<script type="text/javascript">
 			document.write("<a href=\"mail" + "to:" + new Array("ivan.molineris","unito.it").join("@") + "\">" + '<button type="button" class="btn btn-info">Feel free to contact the authors!</button>' + "</" + "a>");
