--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -58,12 +58,14 @@
 	  <h3>Please cite</h3>
 	   <p>Perron, U., Provero, P., & Molineris, I. (2016) <strong>In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression.</strong>
 	   Submitted to BMC Bioinformatics</p>
-	  <a href="http://www.hsr.it/research/organization/divisions-centers/center-for-translational-genomics-and-bioinformatics/"><img width="48%" src="http://www.hsr.it/wp-content/uploads/2014/09/hsr_logo.png"></a>
 	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img width="48%" src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
        </div>
         <div class="col-md-6">
-          <h3>Update</h3>
-	  {% include "mailchimp_form.html" %}
+          <h3>Updates</h3>
+	  <ul>
+		  <li><b>Feb 24 2021</b> Due to a recent change in the infrormatic infrastructure the website can experience slowdowns, if you have some problems doing the analysis you need please contact the authors.</li>
+	  </ul>
+	  {#% include "mailchimp_form.html" %#}
 	  <h3>Any questions?</h3>
 	  	<script type="text/javascript">
 			document.write("<a href=\"mail" + "to:" + new Array("ivan.molineris","unito.it").join("@") + "\">" + '<button type="button" class="btn btn-info">Feel free to contact the authors!</button>' + "</" + "a>");
