--- a/funcpred/templates/home.html
+++ b/funcpred/templates/home.html
@@ -56,8 +56,9 @@
       <div class="row">
         <div class="col-md-6">
 	  <h3>Please cite</h3>
-	   <p>Perron, U., Provero, P., & Molineris, I. (2016) <strong>In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression.</strong>
-	   Submitted to BMC Bioinformatics</p>
+	   <p>
+	   Perron, U., Provero, P. & Molineris, I. In silico prediction of lncRNA function using tissue specific and evolutionary conserved expression. BMC Bioinformatics 18, 144 (2017). <a href="https://doi.org/10.1186/s12859-017-1535-x">https://doi.org/10.1186/s12859-017-1535-x</a>
+	   </p>
 	  <a href="http://www.mbc.unito.it/en/research/research-areas/basic-and-applied-research/unita-di-biologia-computazionale"><img width="48%" src="http://www.mbc.unito.it/sites/x027/files/logo_unito.jpg"></a>
        </div>
         <div class="col-md-6">
